refs #15834.  Fix misbehavior of slider on mobile by using the Slider from dojox.mobile instead of dijit's one + a few cosmetic changes (more AMD syntax, code formatting). Variant for the Dojo trunk. Thanks Adrian Vasiliu, IBM, CCLA
git-svn-id: http://svn.dojotoolkit.org/src/demos/trunk@29581 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/touch/demo.css
+++ b/touch/demo.css
@@ -131,7 +131,7 @@ body, html {
     width: 254px;
     height: 42px;
     left: 23px;
-    margin-top: 30px;
+    margin-top: 15px;
     position: relative;
     z-index: 99999;
     background-image: url("images/bt-lock.png");
